Personalize website for Rohit Kundu

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - The Curious Explorer</title>
+    <title>About - Rohit Kundu</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,40 +32,40 @@
 
         <main class="page-content">
             <p>
-                I believe in the power of curiosity and the compounding nature of learning.
-                Every day is an opportunity to understand something new, to question
-                assumptions, and to grow.
+                I'm Rohit&mdash;a curious person who likes to understand how things
+                work at a fundamental level.
             </p>
 
             <p>
-                My interests span technology, philosophy, design, and the systems that
-                shape our world. I'm particularly drawn to understanding how things work
-                at a fundamental level and finding connections across disciplines.
+                I believe in checklists over intuition, systems over goals, and
+                discipline over motivation. I try to follow a process in everything
+                I do and let the results compound over time.
             </p>
 
             <p>
-                Professionally, I work at the intersection of [your field]. I'm driven
-                by problems that matter and teams that care about craft.
+                I'm drawn to things that reward patience and systematic thinking:
+                building software, reading widely, and creating tools that solve
+                problems I actually have.
             </p>
 
             <h2>Principles</h2>
             <ul>
+                <li>Process over outcome</li>
+                <li>Simplicity is the ultimate sophistication</li>
+                <li>Learn from mistakes, don't repeat them</li>
                 <li>Stay curious, stay humble</li>
-                <li>Learn in public, share generously</li>
-                <li>Depth over breadth, but keep exploring</li>
-                <li>Build things that matter</li>
-                <li>Question everything, especially yourself</li>
+                <li>Build things that matter to you</li>
             </ul>
 
             <h2>Currently</h2>
             <p>
-                Reading broadly, writing occasionally, building things, and trying to
-                ask better questions.
+                Building things. Reading widely. Writing occasionally.
+                Trying to be less wrong than yesterday.
             </p>
         </main>
 
         <footer>
-            <p>Made with curiosity</p>
+            <p>Built with discipline</p>
         </footer>
     </div>
 
