--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - The Curious Explorer</title>
+    <title>Notes - Rohit Kundu</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
         <a href="index.html" class="back-link">Home</a>
 
         <header>
-            <h1>Blog</h1>
+            <h1>Notes</h1>
         </header>
 
         <main class="page-content">
@@ -60,7 +60,7 @@
         </main>
 
         <footer>
-            <p>Made with curiosity</p>
+            <p>Built with discipline</p>
         </footer>
     </div>
 
