--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Curious Explorer</title>
+    <title>Rohit Kundu</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,31 +25,30 @@
 
     <div class="container">
         <header>
-            <h1>The Curious Explorer</h1>
-            <p class="tagline">Learning in public. Building in progress.</p>
+            <h1>Rohit Kundu</h1>
+            <p class="tagline">Building. Learning. Exploring.</p>
         </header>
 
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="blog.html">Notes</a></li>
                 <li><a href="books.html">Books</a></li>
                 <li><a href="links.html">Links</a></li>
-                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
         <main>
             <section class="intro">
                 <p>
-                    Welcome. I'm a perpetual learner navigating the intersection of
-                    technology, ideas, and human experience. This is my corner of the
-                    internet where I share what I'm learning, building, and thinking about.
+                    I'm a builder and a learner. I like understanding how things work,
+                    solving problems systematically, and sharing what I discover along
+                    the way. This is my corner of the internet.
                 </p>
                 <p>
-                    Currently exploring: distributed systems, writing, and the art of
-                    asking better questions.
+                    Currently exploring: systems thinking, building in public,
+                    and the art of asking better questions.
                 </p>
             </section>
 
@@ -58,22 +57,22 @@
                 <ul class="notes-list">
                     <li>
                         <span class="date">2026</span>
-                        <a href="#">On the value of learning in public</a>
+                        <a href="#">Why I use checklists for everything</a>
                     </li>
                     <li>
                         <span class="date">2026</span>
-                        <a href="#">Books that changed how I think</a>
+                        <a href="#">Process over outcome</a>
                     </li>
                     <li>
                         <span class="date">2025</span>
-                        <a href="#">Building systems that last</a>
+                        <a href="#">Learning in public</a>
                     </li>
                 </ul>
             </section>
         </main>
 
         <footer>
-            <p>Made with curiosity</p>
+            <p>Built with discipline</p>
         </footer>
     </div>
 
